add viewport class to Lookup Advanced Modal docs example

--- a/packages/design-system/ui/components/lookups/docs.mdx
+++ b/packages/design-system/ui/components/lookups/docs.mdx
@@ -74,7 +74,7 @@ Lookups allow the user to have dual keyboard focus: while focus in the input sea
 
 ## Grouped
 
-<CodeView>
+<CodeView isViewport>
   {AdvancedModal.default}
 </CodeView>
 
