feat(radio/checkbox/button-group): Add stacked modifier (#4042)

--- a/packages/design-system/ui/components/button-groups/docs.mdx
+++ b/packages/design-system/ui/components/button-groups/docs.mdx
@@ -100,6 +100,21 @@ Unless you are using the list version, include the Aria role `role="group"` so t
   {getDisplayElementById(ButtonGroupsBaseExamples.examples, 'button-group-icon-selected')}
 </CodeView>
 
+### Variations
+
+#### Stacked
+
+A stacked modifier that accounts for the limited width of mobile devices. It's recommended to use the stacked modifier when you have 3 or more options.
+
+<Blockquote type="note" header="Mobile Only">
+  The <code>.slds-button-group_stacked</code> modifier only affects mobile
+  devices, all other devices will show the default layout.
+</Blockquote>
+
+<CodeView>
+  {getDisplayElementById(ButtonGroupsBaseExamples.examples, 'touch-stacked')}
+</CodeView>
+
 ### Brand Button
 
 #### With Overflow Menu
