--- a/packages/design-system/ui/components/radio-button-group/docs.mdx
+++ b/packages/design-system/ui/components/radio-button-group/docs.mdx
@@ -12,21 +12,6 @@ import * as RadioButtonGroupExamples from './base/example';
 
 <CodeView>{RadioButtonGroupExamples.default}</CodeView>
 
-### Variations
-
-#### Stacked
-
-A stacked modifier that accounts for the limited width of mobile devices. It's recommended to use the stacked modifier when you have 3 or more options.
-
-<Blockquote type="note" header="Mobile Only">
-  The <code>.slds-radio_button-group_stacked</code> modifier only affects mobile
-  devices, all other devices will show the default layout.
-</Blockquote>
-
-<CodeView>
-  {getDisplayElementById(RadioButtonGroupExamples.examples, 'touch-stacked')}
-</CodeView>
-
 ### States
 
 #### Disabled
@@ -46,3 +31,8 @@ A stacked modifier that accounts for the limited width of mobile devices. It's r
 <CodeView>
   {getDisplayElementById(RadioButtonGroupExamples.states, 'error')}
 </CodeView>
+
+## Mobile
+
+Within the mobile scope, the layout of radio button group becomes stacked to
+account for the limited horizontal space of mobile screens.
